# ms-peptide-analyzer

./: .gitignore  app.py  pyproject.toml  requirements.txt
examples/: demo.py
src/ms_peptide_analyzer/: __init__.py  cli.py  fragmentation.py  isotopes.py  peptide.py  scorer.py
src/ms_peptide_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_all.py
